@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
- Copyright (C) 2006 - 2011 Philip Aston
+ Copyright (C) 2006 - 2012 Philip Aston
  Copyright (C) 2007 Venelin Mitov
  All rights reserved.
 
@@ -32,6 +32,9 @@
 
   <xsl:output method="text"/>
   <xsl:strip-space elements="*"/>
+
+  <xsl:variable name="testNumberOffset"
+             select="/g:http-recording/g:metadata/g:test-number-offset"/>
 
 
   <xsl:template match="g:http-recording">
@@ -146,7 +149,7 @@ httpUtilities = HTTPPluginControl.getHTTPUtilities()
     <!--  Numbers sequentially follow the requests' page test number. -->
 
     <xsl:variable name="request-number"
-                  select="count(preceding-sibling::g:request) + 1"/>
+                  select="count(preceding-sibling::g:request) + 1 + $testNumberOffset"/>
 
     <xsl:variable name="page-test-number">
       <xsl:apply-templates select=".." mode="generate-test-number"/>
