@@ -9,10 +9,12 @@ The Grinder 3.8 (Not yet released)
   NullPointerException. Thanks to Ouray Viney for the report and
   testing.
 
-  Fix bug 3431287 and bug 3489034 - Ignore HttpOnly attributes in the middle
-  of cookies. Thanks to Alex Crane and Jeremy for the reports.
+  Fix bug 3431287 and bug 3489034 - Ignore HttpOnly attributes in the
+  middle of cookies. Thanks to Alex Crane and Jeremy for the reports.
 
   TCPProxy HTTP recording: improve the extraction of common headers.
+
+  Re-implement TCPProxy support for the HTTPPlugin.initialTest property.
 
 
 The Grinder 3.7.1
